# processing-module-example

./: .gitignore  Dockerfile  LICENSE  pyproject.toml  readme.md
demo_worker/: main.py  workflow.py
julia_set/: main.py  workflow.py
